2013-02-20  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move WebKitPlatformSupport declaration to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=110262

        Reviewed by Adam Barth.

        In preparation for removing WebKitPlatformSupport.h entirely (once
        downstream references to that file have been updated). Part of a
        larger refactoring series; see tracking bug 82948.

        * chromium/public/Platform.h:
        (WebKitPlatformSupport):
        (WebKit::WebKitPlatformSupport::~WebKitPlatformSupport):
        (WebKit):

2013-02-19  Adrienne Walker  <enne@chromium.org>

        Unreviewed, rolling out r143382 and r143401.
        http://trac.webkit.org/changeset/143382
        http://trac.webkit.org/changeset/143401
        https://bugs.webkit.org/show_bug.cgi?id=106457

        Breaks Chromium win/mac canary compilation

        * chromium/public/Platform.h:

2013-02-19  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move WebKitPlatformSupport declaration to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=110262

        Reviewed by Adam Barth.

        In preparation for removing WebKitPlatformSupport.h entirely (once
        downstream references to that file have been updated). Part of a
        larger refactoring series; see tracking bug 82948.

        * chromium/public/Platform.h:
        (WebKitPlatformSupport):
        (WebKit::WebKitPlatformSupport::~WebKitPlatformSupport):
        (WebKit):

2013-02-19  Tommy Widenflycht  <tommyw@google.com>

        WebAudio API: Change the Platform::createAudioDevice function to take a DeviceId parameter
        https://bugs.webkit.org/show_bug.cgi?id=110192

        Reviewed by Adam Barth.

        * chromium/public/Platform.h:
        (WebKit::Platform::createAudioDevice):
        (Platform):

2013-02-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r142841.
        http://trac.webkit.org/changeset/142841